--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,22 @@
+# Server (Railway sets PORT automatically)
 PORT=3001
+
+# Database (Neon Postgres with pgvector)
 DATABASE_URL=postgresql://user:password@ep-xxx.us-east-2.aws.neon.tech/neondb?sslmode=require
+
+# APIs
 ANTHROPIC_API_KEY=sk-ant-api03-xxx
 OPENAI_API_KEY=sk-xxx
-GITHUB_TOKEN= 
-GITHUB_USERNAME= 
+
+# GitHub (optional, for Gist uploads)
+GITHUB_TOKEN=
+GITHUB_USERNAME=
+
+# Production / Railway
+# CORS: comma-separated origins or single FRONTEND_URL (e.g. https://your-app.up.railway.app)
+ALLOWED_ORIGINS=
+FRONTEND_URL=
+
+# Optional: override paths (Railway uses ephemeral disk)
+# UPLOAD_DIR=/tmp/uploads
+# CACHE_DIR=/tmp/cache
