--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^16.1.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "serve": "^14.2.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "serve": "serve -s build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
