fixing db calling on deployed app

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
-# Server (Railway sets PORT automatically)
+# Server
+# PORT: port to listen on (default 3001; Railway sets PORT automatically)
+# HOST: bind address - use 127.0.0.1 or 0.0.0.0 (do not set to a port number)
 PORT=3001
 
 # Database (Neon Postgres with pgvector)
